Swagger docs added
